# ts_athexapod

./: .gitignore  .pre-commit-config.yaml  ATHexapodCSC.py  ATHexapodCommands.py  ATHexapodController.py  ATHexapodSim.py  Jenkinsfile  Jenkinsfile.conda  Jenkinsfile.deploy  README.md  README.rst  SConstruct  pyproject.toml  requirements.txt  runATHexapodCSC.py  setup.cfg  setup.py  test.py  test2.py  testATHexapodCSC.py  testServer.py  todo.txt  towncrier.toml
bin.src/: ATHexpoad_EUI.py  runATHexapodCSC.py  testATHexapodCSC.py
bin.src/settingFiles/: mainSetup.yaml
bin.src/settingFiles/Test/1/: initialHexapodSetup.yaml  tcpConfiguration.yaml
conda/: meta.yaml
doc/: changelog.rst  conf.py  index.rst  manifest.yaml  state-diagram.plantuml  version_history.rst
doc/configuration/: configuration.rst
doc/developer-guide/: developer-guide.rst
doc/lsst.ts.ATHexapod/: index.rst
doc/news/: DM-26216.perf.rst  DM-43634.bugfix.1.rst  DM-43634.bugfix.rst  DM-43634.doc.rst  DM-43634.feature.1.rst  DM-43634.feature.2.rst  DM-43634.feature.rst  DM-43634.misc.rst  DM-49653.bugfix.rst  DM-49653.feature.rst  DM-49653.misc.rst  OSW-720.bugfix.rst  OSW-720.misc.rst  OSW-720.perf.rst  README.rst
doc/user-guide/: user-guide.rst
docker/: Dockerfile  setup.sh
schema/: ATHexapod.yaml
tests/: test.py  test2.py  testATHexapodCSC.py  test_1.py  test_2.py  test_csc.py  test_tcp_controller.py
tests/data/config/: _labels.yaml  all.yaml  host_as_env.yaml
tests/test_remove/: anotherTest.py  anotherTest2.py
ups/: example.cfg  ts_athexapod.table  ts_salobjATHexapod.table
(+38 files in other folders)
