[build-system]
requires = ["setuptools>=45", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "ts-athexapod"
description = "ATHexapod is a Commandable SAL Component for the `Vera C. Rubin Observatory <https://lsst.org>`_."
license = { text = "GPL" }
readme = "README.rst"
urls = { documentation = "https://ts-athexapod.lsst.io", source_code = "https://github.com/lsst-ts/ts_athexapod"}
dynamic = ["version"]

[tool.setuptools.dynamic]
version = { attr = "setuptools_scm.get_version" }

[tool.setuptools.packages.find]
where = [ "python" ]

[project.scripts]
run_athexapod = "lsst.ts.athexapod:execute_csc"

[tool.setuptools_scm]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[project.optional-dependencies]
dev = ["pytest", "black", "flake8"]
